--- a/LocaisDePesca.html
+++ b/LocaisDePesca.html
@@ -5,21 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Locais de Pescar</title>
+    <link rel="stylesheet" href="assets/Css/Style.css">
 </head>
 <body>
     <h1>
         Alguns Locais de Pescaria em (SP)
     </h1>
-
-    <ul>
-        <li>
-           <a href="index.html">Ínicio</a> 
-         </li> 
- 
-         <li>
-            <a href="LocaisDePesca.html">Locais de Pescaria(SP)</a> 
-         </li> 
-     </ul>
 
     <form action="Água doce"><h2>Água doce</h2> </form> 
     <br>
@@ -51,5 +42,14 @@
     <h3>Endereço:</h3>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3645.1272067091663!2d-46.30284384884788!3d-23.99128471805877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce0212fbde5131%3A0xbcad0368237c739c!2sAv.%20Alm.%20Saldanha%20da%20Gama%2C%2063%20-%20Ponta%20da%20Praia%2C%20Santos%20-%20SP%2C%2011030-400!5e0!3m2!1spt-BR!2sbr!4v1641837843443!5m2!1spt-BR!2sbr" width="400" height="300" style="border:5;" allowfullscreen="" loading="lazy"></iframe>
      
+    <ul id="menu">
+        <li>
+           <a href="index.html">Ínicio</a> 
+         </li> 
+ 
+         <li>
+            <a href="LocaisDePesca.html">Locais de Pescaria(SP)</a> 
+         </li> 
+     </ul>
 </body>
 </html>
